--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://soham5.github.io/todoapp-frontend/"
+  "homepage": "https://todos.sohamsur.com/"
 }
