--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://todos.sohamsur.com/"
+  "homepage": "https://todo.sohamsur.com/"
 }
